--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <body>
     <div id="root"></div>
   </body>
-  <script src="index_bundle.js"></script>
+  <script src="./index_bundle.js"></script>
 </html>
